[package]
name = "tokio-fs-stream"
version = "0.0.1"
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
edition = "2018"

[dependencies]
tokio-fs = "0.1"
serde = "1"
futures = "0.1"
log = "0.4"
async-bincode = "0.4"
bincode = "1"
tokio = "1.6"
notify = "4"
custom_error = { version=">=1.4.1, < 1.7.1" }

[dev-dependencies]
pretty_env_logger = "0.3"
futures-retry = "0.3"
reqwest = "0.9"

